--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <tr>
       <td>
         <img src="Homer.jpg" alt="image">
-        <h1>Dan Donahue</h1>
+        <h1>Dan</h1>
       </td>
       <td>
         <p><em>Beginner developer</em></p>
